force-app/main/default/objects/Account/fields/AFE__c.field-meta.xml
<CustomField>
    <fullName>AFE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFE</label>
    <type>Checkbox</type>
</CustomField>