force-app/main/default/objects/Account/fields/afeanvisa__c.field-meta.xml
<CustomField>
    <fullName>afeanvisa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFE ANVISA</label>
    <type>Checkbox</type>
</CustomField>