force-app/main/default/objects/Account/fields/Alvara_Sanitario_codigo__c.field-meta.xml
<CustomField>
    <fullName>Alvara_Sanitario_codigo__c</fullName>
    <label>Alvará Sanitário</label>
    <length>20</length>
    <type>Text</type>
</CustomField>