force-app/main/default/objects/Account/fields/Alvara_Sanitario_Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Alvara_Sanitario_Fornecedor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alvará Sanitário (Fornecedor)</label>
    <type>Checkbox</type>
</CustomField>