force-app/main/default/objects/Account/fields/alvaradelocalizacaoefuncionamento__c.field-meta.xml
<CustomField>
    <fullName>alvaradelocalizacaoefuncionamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alvará de Localização e Funcionamento</label>
    <type>Checkbox</type>
</CustomField>