force-app/main/default/objects/Account/fields/AlvaraFuncConforme__c.field-meta.xml
<CustomField>
    <fullName>AlvaraFuncConforme__c</fullName>
    <formula>AND(alvaradelocalizacaoefuncionamento__c, NOT(ISBLANK(venc_Alv_Localizacao__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AlvaraFuncConforme</label>
    <type>Checkbox</type>
</CustomField>