force-app/main/default/objects/Account/fields/AlvaraSaniConforme__c.field-meta.xml
<CustomField>
    <fullName>AlvaraSaniConforme__c</fullName>
    <formula>AND(alvarasanitariomunicipal__c, NOT(ISBLANK(venc_Alv_Sanitario__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AlvaraSaniConforme</label>
    <type>Checkbox</type>
</CustomField>