force-app/main/default/objects/Account/fields/AlvaraSanitario__c.field-meta.xml
<CustomField>
    <fullName>AlvaraSanitario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alvará Sanitário</label>
    <type>Checkbox</type>
</CustomField>