force-app/main/default/objects/Account/fields/Area_da_Saude__c.field-meta.xml
<CustomField>
    <fullName>Area_da_Saude__c</fullName>
    <inlineHelpText>Preencher para contas do tipo fornecedor</inlineHelpText>
    <label>Área da Saúde</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>