force-app/main/default/objects/Account/fields/autorizacaoFuncionamentoAnvisa__c.field-meta.xml
<CustomField>
    <fullName>autorizacaoFuncionamentoAnvisa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorização de funcionamento - Anvisa</label>
    <type>Checkbox</type>
</CustomField>