force-app/main/default/objects/Account/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <description>bairo</description>
    <inlineHelpText>bairo</inlineHelpText>
    <label>Bairro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>