force-app/main/default/objects/Account/fields/Bloqueado_Juridico__c.field-meta.xml
<CustomField>
    <fullName>Bloqueado_Juridico__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Se marcado, as contações e opp para essa conta serão bloqueadas.</inlineHelpText>
    <label>Bloqueado — Juridico</label>
    <type>Checkbox</type>
</CustomField>