force-app/main/default/objects/Account/fields/cartaocnpj__c.field-meta.xml
<CustomField>
    <fullName>cartaocnpj__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cartão CNPJ</label>
    <type>Checkbox</type>
</CustomField>