force-app/main/default/objects/Account/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLINICA</fullName>
            </value>
            <value>
                <fullName>FARMACÊUTICA</fullName>
            </value>
            <value>
                <fullName>GOVERNO</fullName>
            </value>
            <value>
                <fullName>HOSPITAL</fullName>
            </value>
            <value>
                <fullName>INDUSTRIA</fullName>
            </value>
            <value>
                <fullName>LABORATORIO</fullName>
            </value>
            <value>
                <fullName>ORGANIZAÇÃO SOCIAL</fullName>
            </value>
            <value>
                <fullName>ORGÃO GESTOR</fullName>
            </value>
            <value>
                <fullName>PLANO DE SAÚDE</fullName>
            </value>
            <value>
                <fullName>UNIVERSIDADE</fullName>
            </value>
            <value>
                <fullName>VETERINÁRIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>