force-app/main/default/objects/Account/fields/Certidao_de_Responsabilidade_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>Certidao_de_Responsabilidade_Tecnica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certidão de Responsabilidade Técnica</label>
    <type>Checkbox</type>
</CustomField>