force-app/main/default/objects/Account/fields/Certificado_de_BPF_anvisa__c.field-meta.xml
<CustomField>
    <fullName>Certificado_de_BPF_anvisa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificado de BPF (anvisa)</label>
    <type>Checkbox</type>
</CustomField>