force-app/main/default/objects/Account/fields/Certificados__c.field-meta.xml
<CustomField>
    <fullName>Certificados__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Certificados como ISO 9001, ISO 13485, Certificado de Boas Práticas</inlineHelpText>
    <label>Certificados como ISO 9001</label>
    <type>Checkbox</type>
</CustomField>