force-app/main/default/objects/Account/fields/certificadosCalibracao__c.field-meta.xml
<CustomField>
    <fullName>certificadosCalibracao__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Certificados dos padrões de calibração rastreados pela rede brasileira de calibração (aplicável para empresas relacionadas a calibração)</inlineHelpText>
    <label>Certificados dos Padrões de Calibração</label>
    <type>Checkbox</type>
</CustomField>