force-app/main/default/objects/Account/fields/Chefe_de_UTI__c.field-meta.xml
<CustomField>
    <fullName>Chefe_de_UTI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chefe de UTI</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas (Chefe de UTI)</relationshipLabel>
    <relationshipName>Contas2</relationshipName>
    <type>Lookup</type>
</CustomField>