force-app/main/default/objects/Account/fields/Cliente_Cobrado_Hoje__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Cobrado_Hoje__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Campo atualizado automaticamente, diariamente após o envio da cobrança via whatsapp. Somente sao cobrados clientes com +2 dias de atraso. Este campo é resetado todo final do dia.</inlineHelpText>
    <label>Cliente Cobrado Hoje</label>
    <type>Checkbox</type>
</CustomField>