force-app/main/default/objects/Account/fields/Cliente_da__c.field-meta.xml
<CustomField>
    <fullName>Cliente_da__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente da</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>