force-app/main/default/objects/Account/fields/Cnae__c.field-meta.xml
<CustomField>
    <fullName>Cnae__c</fullName>
    <description>Cnae da conta do cliente</description>
    <inlineHelpText>Cnae da conta do cliente</inlineHelpText>
    <label>Cnae</label>
    <length>50</length>
    <type>Text</type>
</CustomField>