force-app/main/default/objects/Account/fields/Compras_a_Prazo__c.field-meta.xml
<CustomField>
    <fullName>Compras_a_Prazo__c</fullName>
    <label>Compras a Prazo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>