force-app/main/default/objects/Account/fields/Contrato_Social__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Social__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contrato Social e última alteração contratual</inlineHelpText>
    <label>Contrato Social</label>
    <type>Checkbox</type>
</CustomField>