force-app/main/default/objects/Account/fields/corpodebombeiros__c.field-meta.xml
<CustomField>
    <fullName>corpodebombeiros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corpo de Bombeiros</label>
    <type>Checkbox</type>
</CustomField>