force-app/main/default/objects/Account/fields/CREAConforme__c.field-meta.xml
<CustomField>
    <fullName>CREAConforme__c</fullName>
    <formula>AND(	crea__c, NOT(ISBLANK(	venc_CREA__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CREAConforme</label>
    <type>Checkbox</type>
</CustomField>