force-app/main/default/objects/Account/fields/Credito_Utilizado__c.field-meta.xml
<CustomField>
    <fullName>Credito_Utilizado__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credito Utilizado</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>