force-app/main/default/objects/Account/fields/Data_da_Ultima_Venda__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Ultima_Venda__c</fullName>
    <label>Data da Ultima Venda</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>WIN</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>