force-app/main/default/objects/Account/fields/Data_de_cria_o_da_conta__c.field-meta.xml
<CustomField>
    <fullName>Data_de_cria_o_da_conta__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de criação da conta</label>
    <type>Date</type>
</CustomField>