force-app/main/default/objects/Account/fields/Data_do_pr_ximo_contato__c.field-meta.xml
<CustomField>
    <fullName>Data_do_pr_ximo_contato__c</fullName>
    <label>Data do próximo contato</label>
    <type>Date</type>
</CustomField>