force-app/main/default/objects/Account/fields/Data_do_Ultimo_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Data_do_Ultimo_Pedido__c</fullName>
    <label>Data do Ultimo Pedido</label>
    <type>DateTime</type>
</CustomField>