force-app/main/default/objects/Account/fields/Decisor__c.field-meta.xml
<CustomField>
    <fullName>Decisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas (Decisor)</relationshipLabel>
    <relationshipName>Contas1</relationshipName>
    <type>Lookup</type>
</CustomField>