force-app/main/default/objects/Account/fields/Email_cliente__c.field-meta.xml
<CustomField>
    <fullName>Email_cliente__c</fullName>
    <description>Email do cliente</description>
    <inlineHelpText>insira o email do cliente</inlineHelpText>
    <label>Email cliente</label>
    <type>Email</type>
</CustomField>