force-app/main/default/objects/Account/fields/Email_do_ltimo_contato__c.field-meta.xml
<CustomField>
    <fullName>Email_do_ltimo_contato__c</fullName>
    <formula>ultimo_contato_conta__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Informação inserida automaticamente com os dados do ultimo contato da conta</inlineHelpText>
    <label>Email do último contato</label>
    <type>Text</type>
</CustomField>