force-app/main/default/objects/Account/fields/Email_verificado__c.field-meta.xml
<CustomField>
    <fullName>Email_verificado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email verificado</label>
    <type>Checkbox</type>
</CustomField>