force-app/main/default/objects/Account/fields/Endere_o__c.field-meta.xml
<CustomField>
    <fullName>Endere_o__c</fullName>
    <formula>BillingCity + &quot; - &quot; + BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço curto</label>
    <type>Text</type>
</CustomField>