force-app/main/default/objects/Account/fields/Erro_integra_o__c.field-meta.xml
<CustomField>
    <fullName>Erro_integra_o__c</fullName>
    <description>mostra o erro caso aconteça erro ao integrar cliente no sap</description>
    <inlineHelpText>mostra o erro caso aconteça erro ao integrar cliente no sap</inlineHelpText>
    <label>Erro integração</label>
    <type>TextArea</type>
</CustomField>