force-app/main/default/objects/Account/fields/Especialidade__c.field-meta.xml
<CustomField>
    <fullName>Especialidade__c</fullName>
    <label>Especialidade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACUPUNTURA</fullName>
            </value>
            <value>
                <fullName>AGROPECUARIA</fullName>
            </value>
            <value>
                <fullName>ALERGIA</fullName>
            </value>
            <value>
                <fullName>ALIMENTICIA</fullName>
            </value>
            <value>
                <fullName>ANESTESIOLOGIA</fullName>
            </value>
            <value>
                <fullName>ANGIOLOGIA</fullName>
            </value>
            <value>
                <fullName>CANCEROLOGIA</fullName>
            </value>
            <value>
                <fullName>CARDIOLOGIA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA CARDIOVASCULAR</fullName>
            </value>
            <value>
                <fullName>CIRURGIA DA MÃO</fullName>
            </value>
            <value>
                <fullName>CIRURGIA DE CABEÇA E PESCOÇO</fullName>
            </value>
            <value>
                <fullName>CIRURGIA DO APARELHO DIGESTIVO</fullName>
            </value>
            <value>
                <fullName>CIRURGIA GERAL</fullName>
            </value>
            <value>
                <fullName>CIRURGIA PEDIATRICA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA PLASTICA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA TORACICA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA VASCULAR</fullName>
            </value>
            <value>
                <fullName>CLINICA DE ESTÉTICA</fullName>
            </value>
            <value>
                <fullName>CLINICA DIAGNÓSTICA</fullName>
            </value>
            <value>
                <fullName>CLINICA MEDICA</fullName>
            </value>
            <value>
                <fullName>COLOPROCTOLOGIA</fullName>
            </value>
            <value>
                <fullName>DERMATOLOGIA</fullName>
            </value>
            <value>
                <fullName>EMERGENCIA</fullName>
            </value>
            <value>
                <fullName>ENDOCRINOLOGIA</fullName>
            </value>
            <value>
                <fullName>ENDOSCOPIA</fullName>
            </value>
            <value>
                <fullName>ESTERILIZAÇÃO</fullName>
            </value>
            <value>
                <fullName>FARMACEUTICA</fullName>
            </value>
            <value>
                <fullName>FARMACIA</fullName>
            </value>
            <value>
                <fullName>FUNDAÇÃO</fullName>
            </value>
            <value>
                <fullName>GASTROENTEROLOGIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>