force-app/main/default/objects/Account/fields/Estrutura_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Estrutura_do_Cliente__c</fullName>
    <label>Estrutura do Cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>