force-app/main/default/objects/Account/fields/Fornecedor_avaliado_ultima_vez_em__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor_avaliado_ultima_vez_em__c</fullName>
    <label>Fornecedor  avaliado ultima vez em</label>
    <type>DateTime</type>
</CustomField>