force-app/main/default/objects/Account/fields/GC_Last_touch__c.field-meta.xml
<CustomField>
    <fullName>GC_Last_touch__c</fullName>
    <formula>image(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chd=t:&quot;&amp;TEXT(100- GC_Days_since_last_update_or_activity__c  )&amp;&quot;&amp;chs=200x75&amp;chco=cccccc,236FBD&amp;chxt=x,y&amp;chxl=0:||1:|old|recent&quot;,&quot;Last touch&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last touch</label>
    <type>Text</type>
</CustomField>