force-app/main/default/objects/Account/fields/GC_Sales_target_this_year__c.field-meta.xml
<CustomField>
    <fullName>GC_Sales_target_this_year__c</fullName>
    <label>Sales target this year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>