force-app/main/default/objects/Account/fields/GC_Sales_vs_target__c.field-meta.xml
<CustomField>
    <fullName>GC_Sales_vs_target__c</fullName>
    <formula>IF(  GC_Sales_target_this_year__c &lt;&gt; 0, image(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chd=t:&quot;&amp;TEXT(100 * GC_Sold_2010__c /  GC_Sales_target_this_year__c  )&amp;&quot;&amp;chs=200x75&amp;chco=CCCCCC,236FBD&amp;chl=&quot;,&quot;Sales vs target&quot;), 
image(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chco=CCCCCC,236FBD&amp;chd=t:&quot;&amp;TEXT(0 )&amp;&quot;&amp;chs=200x75&amp;chl=&quot;,&quot;Sales vs target&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales vs target</label>
    <type>Text</type>
</CustomField>