force-app/main/default/objects/Account/fields/GC_Sold_2010__c.field-meta.xml
<CustomField>
    <fullName>GC_Sold_2010__c</fullName>
    <label>Sold 2010</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterThan</operation>
        <value>1/1/2010</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2010</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>