force-app/main/default/objects/Account/fields/Grupo__c.field-meta.xml
<CustomField>
    <fullName>Grupo__c</fullName>
    <label>Grupo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Órgãos Públicos</fullName>
            </value>
            <value>
                <fullName>Fornecedores</fullName>
            </value>
            <value>
                <fullName>Contribuinte</fullName>
            </value>
            <value>
                <fullName>Não Contribuinte</fullName>
            </value>
            <value>
                <fullName>Transportadoras</fullName>
            </value>
            <value>
                <fullName>ALTERAR GRUPO</fullName>
            </value>
            <value>
                <fullName>Industria</fullName>
            </value>
            <value>
                <fullName>Revenda</fullName>
            </value>
            <value>
                <fullName>Colaboradores</fullName>
            </value>
            <value>
                <fullName>Pessoa Física</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>