force-app/main/default/objects/Account/fields/Grupo_Hospcom__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Hospcom__c</fullName>
    <description>Campo de verificação de IDs - criado por Victor Gabriel, versão real oficial.</description>
    <formula>CONTAINS( &quot;0016e00002y3EilAAE,0016e000036biMZAAY,0016e00003MebrWAAR,0015A00002SZiBcQAL,0015A00001yGbVZQA0,001U400000LvWNnIAN,0015A00001tSrPaQAK,001i00000085QYbAAM,001U400000N849MIAR,0016e00002y5N5bAAE,001U400000N7L4HIAV,001U400000Oi429IAB,001U400000Op8FRIAZ,001U4000006s18xIAA,001U400000NafuRIAR,001U4000006NOXhIAO,001U4000006sAHDIA2,001U400000UOpmWIAT,001U400000IVFNIIA5,001U400000G2xUJIAZ,001U40000010gmgIAA,0016e00003JCYFtAAP,0015A00002GC6r6QAD&quot;,Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo Hospcom</label>
    <type>Checkbox</type>
</CustomField>