force-app/main/default/objects/Account/fields/Grupo_SKA__c.field-meta.xml
<CustomField>
    <fullName>Grupo_SKA__c</fullName>
    <label>Grupo SKA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>