force-app/main/default/objects/Account/fields/GrupoHospcom__c.field-meta.xml
<CustomField>
    <fullName>GrupoHospcom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se a nova conta faz parte do grupo HOSPCOM</description>
    <inlineHelpText>Criado para filtrar as empresas do grupo</inlineHelpText>
    <label>GrupoHospcom</label>
    <type>Checkbox</type>
</CustomField>