force-app/main/default/objects/Account/fields/id_da_conta2__c.field-meta.xml
<CustomField>
    <fullName>id_da_conta2__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id da conta</label>
    <type>Text</type>
</CustomField>