force-app/main/default/objects/Account/fields/ID_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>ID_da_Conta__c</fullName>
    <label>ID da Conta*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>