force-app/main/default/objects/Account/fields/ID_Mindray__c.field-meta.xml
<CustomField>
    <fullName>ID_Mindray__c</fullName>
    <label>ID Mindray</label>
    <length>50</length>
    <type>Text</type>
</CustomField>