force-app/main/default/objects/Account/fields/Identificacao_fiscal__c.field-meta.xml
<CustomField>
    <fullName>Identificacao_fiscal__c</fullName>
    <description>Unifica identificação fiscal de tipos diferentes de contas.</description>
    <formula>IF(
	RecordType.Name = &apos;Conta comercial&apos;,
	CNPJ__c,
	IF(
		RecordType.Name = &apos;Conta pessoal&apos;,
		CPF__pc,
		&apos;...&apos;
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificação fiscal</label>
    <type>Text</type>
</CustomField>