force-app/main/default/objects/Account/fields/Inadimplente__c.field-meta.xml
<CustomField>
    <fullName>Inadimplente__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quando marcado como verdadeiro, todos os pedidos dessa conta irão passar por aprovação da diretoria.</inlineHelpText>
    <label>Bloqueado</label>
    <type>Checkbox</type>
</CustomField>