force-app/main/default/objects/Account/fields/Inadiplente__c.field-meta.xml
<CustomField>
    <fullName>Inadiplente__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quando marcado como verdadeiro, sinaliza que o cliente está inadimplente, mas nao influencia no fluxo de aprovação de pedidos.</inlineHelpText>
    <label>inadimplente</label>
    <type>Checkbox</type>
</CustomField>