force-app/main/default/objects/Account/fields/Inscri_o_Estadual__c.field-meta.xml
<CustomField>
    <fullName>Inscri_o_Estadual__c</fullName>
    <description>Inscrição Estadual</description>
    <label>Inscrição estadual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>