force-app/main/default/objects/Account/fields/Inscri_o_Municipal__c.field-meta.xml
<CustomField>
    <fullName>Inscri_o_Municipal__c</fullName>
    <label>Inscrição municipal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>