force-app/main/default/objects/Account/fields/ISO_17025__c.field-meta.xml
<CustomField>
    <fullName>ISO_17025__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISO 17025</label>
    <type>Checkbox</type>
</CustomField>