force-app/main/default/objects/Account/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <length>10</length>
    <type>Text</type>
</CustomField>