force-app/main/default/objects/Account/fields/Licen_aAmbientalConforme__c.field-meta.xml
<CustomField>
    <fullName>Licen_aAmbientalConforme__c</fullName>
    <formula>AND(licencaambiental__c, NOT(ISBLANK(venc_Licenca_Ambiental__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LicençaAmbientalConforme</label>
    <type>Checkbox</type>
</CustomField>