force-app/main/default/objects/Account/fields/licencaambiental__c.field-meta.xml
<CustomField>
    <fullName>licencaambiental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licença Ambiental</label>
    <type>Checkbox</type>
</CustomField>