force-app/main/default/objects/Account/fields/Linhas_Clientes__c.field-meta.xml
<CustomField>
    <fullName>Linhas_Clientes__c</fullName>
    <label>Linhas Clientes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>linha</valueSetName>
    </valueSet>
</CustomField>