force-app/main/default/objects/Account/fields/loginCommerce__c.field-meta.xml
<CustomField>
    <fullName>loginCommerce__c</fullName>
    <description>Login (e-mail) utilizado para entrar no commerce</description>
    <label>Login Commerce</label>
    <type>Email</type>
</CustomField>