force-app/main/default/objects/Account/fields/Matriz__c.field-meta.xml
<CustomField>
    <fullName>Matriz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matriz</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas (Matriz)</relationshipLabel>
    <relationshipName>Contas2</relationshipName>
    <type>Lookup</type>
</CustomField>