force-app/main/default/objects/Account/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <length>250</length>
    <type>Text</type>
</CustomField>