force-app/main/default/objects/Account/fields/N_da_rua__c.field-meta.xml
<CustomField>
    <fullName>N_da_rua__c</fullName>
    <description>Número da rua</description>
    <inlineHelpText>Número da rua</inlineHelpText>
    <label>Nº da rua</label>
    <length>50</length>
    <type>Text</type>
</CustomField>