force-app/main/default/objects/Account/fields/N_oIncomodar__c.field-meta.xml
<CustomField>
    <fullName>N_oIncomodar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Não incomodar com ligações ou mensagens.</description>
    <label>NãoIncomodar</label>
    <type>Checkbox</type>
</CustomField>