force-app/main/default/objects/Account/fields/NIT__c.field-meta.xml
<CustomField>
    <fullName>NIT__c</fullName>
    <inlineHelpText>Formato XXX.XXX.XXX - Y</inlineHelpText>
    <label>NIT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>