force-app/main/default/objects/Account/fields/Observa_es__c.field-meta.xml
<CustomField>
    <fullName>Observa_es__c</fullName>
    <label>Observações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>