force-app/main/default/objects/Account/fields/ParaCobrarHoje__c.field-meta.xml
<CustomField>
    <fullName>ParaCobrarHoje__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clientes que vão ser cobrados hoje
Atraves do fluxo: https://workflow.hospcom.net/workflow/oa0eXB31sNG0YZbt</description>
    <label>ParaCobrarHoje</label>
    <type>Checkbox</type>
</CustomField>