force-app/main/default/objects/Account/fields/Pontos_Total_da_Qualifica_o_Number__c.field-meta.xml
<CustomField>
    <fullName>Pontos_Total_da_Qualifica_o_Number__c</fullName>
    <formula>VALUE(pontosTotalQualificacao__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos Total da Qualificação Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>